WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
224127
Web Inspector: Audit: Edit button call to action is incorrect until after entering and exiting edit mode.
https://bugs.webkit.org/show_bug.cgi?id=224127
Summary
Web Inspector: Audit: Edit button call to action is incorrect until after ent...
Patrick Angle
Reported
2021-04-02 13:21:36 PDT
Created
attachment 425047
[details]
Screenshot of Issue Steps to reproduce: 1. Inspect webkit.org 2. Go to the Audit tab. 3. See that the text in the main panel ends with "Press Edit to enable audits." 4. Enter edit mode. 5. Leave edit mode. 6. See that the text in the main panel now ends with "Press Edit to start editing audits." ====== The second string of text is correct, but the first one is not.
Attachments
Screenshot of Issue
(19.41 KB, image/png)
2021-04-02 13:21 PDT
,
Patrick Angle
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-04-02 13:22:16 PDT
<
rdar://problem/76162317
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug