Web Inspector: Grid overlay does not honor writing modes and RTL layout direction. https://bugs.webkit.org/show_bug.cgi?id=224127

Reviewed by BJ Burg.

Source/WebCore:

Grid overlays did not previous honor writing modes and RTL layout direction correctly. The underlying math was
correct, but the 'origin' of the element's grid, and the direction in which rows and columns increased, was not
handled correctly. This patch resolves this by taking writing mode and direction into account when calculating
row/column line positions as well as correctly orienting layout label arrows based on the current writing
mode/direction.

Area names have been moved to the center of their respective areas, which both helps to make sure the label is
within the area for all writing modes/direction/transformation, as well as improved legibility on smaller grids
where area names were previously behind other labels.

* inspector/InspectorOverlay.cpp:
(WebCore::InspectorOverlay::backgroundPathForLayoutLabel):
(WebCore::InspectorOverlay::drawLayoutLabel):
(WebCore::InspectorOverlay::drawGridOverlay):
- `backgroundPathForLayoutLabel`, `drawLayoutLabel`, and `drawGridOverlay` now interpret the `None` arrow direction
as using the label's location as its center, not top-left.
(WebCore::authoredGridTrackSizes):
- Drive-by removal of extra whitespace.
(WebCore::InspectorOverlay::buildGridOverlay):
- Use the element's computed style to determine writing mode and direction (which takes into account the `dir` attribute).
- Adjust columnLineAt and rowLineAt calculations based on writing mode and direction.
- Adjust all arrow directions and positions based on writing mode and direction.

Source/WebKit:

* UIProcess/Inspector/ios/WKInspectorHighlightView.mm:
(createLayoutLabelLayer):
- WebCore::backgroundPathForLayoutLabel now treats the `None` arrow direction as being centered on the label's
location.


Canonical link: https://commits.webkit.org/236176@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275519 268f45cc-cd09-0410-ab3c-d52691b4dbfc